[deploy] try using serviceType LoadBalancer instead of ingress

--- a/deploy/helm/ifrcgo-helm/templates/api/service.yaml
+++ b/deploy/helm/ifrcgo-helm/templates/api/service.yaml
@@ -9,7 +9,7 @@ metadata:
     environment: {{ .Values.environment }}
     release: {{ .Release.Name }}
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 80
